--- a/wiki/teran/index.html
+++ b/wiki/teran/index.html
@@ -1,4 +1,4 @@
-<html lang="pl"></html>
+<html lang="pl">
 <head>
 <link rel="icon" href="/fangea/local/fangeapage.png" type="image/png">
 <meta charset="UTF-8" />
@@ -28,9 +28,8 @@
 <ul></ul>
 </nav>
 <article>
-<header><div>Teran</div><span>06.10.2024</span></header>
-<div class="uncomplete"></div>
-<table class="infobox"><caption>Królestwo Teranu</caption><tbody><tr><th style="text-align: center;" colspan="2"> <i>Kraljestvo Terana</i></th></tr><tr><td colspan="2"><table class="ibox"><tbody><tr><td><img src="https://i.ibb.co/fDDgkhd/teran.png" data-description="Flaga Teranu"></td><td><img src="https://i.ibb.co/v1yQSzT/teran-tuhalf-godlo.png" data-description="Godło Teranu"> </td></tr><tr><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/flaga_teranu/">Flaga</a></td><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/godło_teranu/">Godło</a> </td></tr></tbody></table></td></tr></tbody></table>
+<header><div>Teran</div><span>12.10.2024</span></header>
+<table class="infobox"><caption>Królestwo Teranu</caption><tbody><tr><th style="text-align: center;" colspan="2"> <i>Kraljestvo Terana</i></th></tr><tr><td colspan="2"><table class="ibox"><tbody><tr><td><img src="https://i.ibb.co/fDDgkhd/teran.png" data-description="Flaga Teranu"></td><td><img src="https://i.ibb.co/v1yQSzT/teran-tuhalf-godlo.png" data-description="Godło Teranu"> </td></tr><tr><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/flaga_teranu/">Flaga</a></td><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/godło_teranu/">Godło</a> </td></tr></tbody></table></td></tr><tr><td style="text-align: center;" colspan="2"> Hymn: <a href="https://grumqy.github.io/fangea/wiki/hymn_iznotii/"><i>Za Kralja gospod!</i></a><br>(<i>Za Króla pana!</i>) </td></tr><tr><td style="text-align: center;" colspan="2"> <audio controls=""><source src="https://audio.jukehost.co.uk/mzYUEBhTN45Cn4EcF91QQjsYMAou7PJw" type="audio/mpeg"></audio> </td></tr></tbody></table>
 
 <p><b>Teran</b>, <b>Królestwo Teranu</b> (słoweń. <i>Teran</i>, Kraljestvo Terana).</p>
  <div id="source-code" style="display:none;">{|infobox Królestwo Teranu
@@ -39,6 +38,8 @@
 |[[timg:https://i.ibb.co/fDDgkhd/teran.png|Flaga Teranu]] || [[timg:https://i.ibb.co/v1yQSzT/teran-tuhalf-godlo.png|Godło Teranu]] |
 |t=c (https://grumqy.github.io/fangea/wiki/flaga_teranu/)[Flaga] ||t=c (https://grumqy.github.io/fangea/wiki/godło_teranu/)[Godło] |
 }|
+|t=cc=2 Hymn: (https://grumqy.github.io/fangea/wiki/hymn_iznotii/)[''Za Kralja gospod!'']<br>(''Za Króla pana!'') |
+|t=cc=2 <audio controls=""><source src="https://audio.jukehost.co.uk/mzYUEBhTN45Cn4EcF91QQjsYMAou7PJw" type="audio/mpeg"></audio> |
 |}
 
 '''Teran''', '''Królestwo Teranu''' (słoweń. ''Teran'', Kraljestvo Terana).</div>
