--- a/wiki/index.html
+++ b/wiki/index.html
@@ -62,6 +62,7 @@
             </ul> 
             <ul class="article-category">
                 <h1>Postacie</h1>
+                <li><a href="https://grumqy.github.io/fangea/wiki/neku/">Neku</a></li>
             </ul> 
             <ul class="article-category">
                 <h1>Miasta</h1>
