--- a/wiki/neku/index.html
+++ b/wiki/neku/index.html
@@ -30,7 +30,7 @@
 <article>
 <header><div>Neku</div><span>12.10.2024</span></header>
 
-<table class="infobox"><caption>Neku</caption><tbody><tr><td colspan="2"> <img src="https://i.ibb.co/8DvY9J4/neku.png640x360" data-description="Neku podczas koncertu w Montparnasse"> </td></tr><tr><td style="text-align: center;" colspan="2"> Neku podczas koncertu w <a href="https://grumqy.github.io/fangea/wiki/montparnasse/">Montparnasse</a>, 2024 </td></tr><tr><td colspan="2"><table class="ibox"><tbody></tbody></table></td></tr><tr><th><b>Data urodzenia</b></th><td> 6 październik 1987, <a href="https://grumqy.github.io/fangea/wiki/makronezja/">Makronezja</a> </td></tr><tr><th><b>Obywatelstwo</b></th><td> <a href="https://grumqy.github.io/fangea/wiki/makronezja/">Makronezyjskie</a> </td></tr><tr><th><b>Zawód</b></th><td> Piosenkarka, aktorka głosowa </td></tr><tr><th><b>Lata aktywności</b></th><td> Od 28 kwietnia 2007 </td></tr><tr><th style="text-align: center;" colspan="2"> <b>Kariera muzyczna</b></th></tr><tr><th><b>Gatunki</b></th><td> J-pop, elektryczna </td></tr><tr><th><b>Wytwórnia</b></th><td> <a href="https://grumqy.github.io/fangea/wiki/kanako/">Kanako</a> </td></tr><tr><th><b>Strona internetowa</b></th><td> <a href="https://grumqy.github.io/fangea/wiki/dobalekpl/">https://neku.mk/neku</a>/ </td></tr></tbody></table>
+<table class="infobox"><caption>Neku</caption><tbody><tr><td colspan="2"> <img src="https://i.ibb.co/8DvY9J4/neku.png640x360" data-description="Neku podczas koncertu w Montparnasse"> </td></tr><tr><td style="text-align: center;" colspan="2"> Neku podczas koncertu w <a href="https://grumqy.github.io/fangea/wiki/montparnasse/">Montparnasse</a>, 2024 </td></tr><tr><td colspan="2"><table class="ibox"><tbody></tbody></table></td></tr><tr><th><b>Data urodzenia</b></th><td> 6 październik 1987, <a href="https://grumqy.github.io/fangea/wiki/makronezja/">Makronezja</a> </td></tr><tr><th><b>Obywatelstwo</b></th><td> <a href="https://grumqy.github.io/fangea/wiki/makronezja/">Makronezyjskie</a> </td></tr><tr><th><b>Zawód</b></th><td> Piosenkarka, aktorka głosowa </td></tr><tr><th><b>Lata aktywności</b></th><td> Od 28 kwietnia 2007 </td></tr><tr><th style="text-align: center;" colspan="2"> <b>Kariera muzyczna</b></th></tr><tr><th><b>Gatunki</b></th><td> J-pop, elektryczna </td></tr><tr><th><b>Wytwórnia</b></th><td> <a href="https://grumqy.github.io/fangea/wiki/kanako/">Kanako</a> </td></tr><tr><th><b>Strona internetowa</b></th><td> <a href="https://grumqy.github.io/fangea/wiki/dobalekpl/">https://neku.mk/neku/</a> </td></tr></tbody></table>
 
 <p><b>Yui Miyu</b> (jap. 優美, ur. 6 października 1987), znana jako <b>Neku</b> (jap. ネク) - <a href="https://grumqy.github.io/fangea/wiki/makronezja/">makronezyjska</a> <a href="https://grumqy.github.io/fangea/wiki/piosenkarz/">piosenkarka</a>, osobowość internetowa i <a href="https://grumqy.github.io/fangea/wiki/aktor/">aktorka</a>. Uznawana za jedną z najpopularniejszych piosenkarek w historii makronezyjskiej muzyki rozrywkowej oraz największą gwiazdę makronezyjskiego show-biznesu. Znana jest ze swojego występu w utworze „<a href="https://grumqy.github.io/fangea/wiki/white_and_dark/">White and Dark!!</a>” z 2009, który zyskał popularność w internecie. Występowała w wielu seriach anime oraz powieściach wizualnych.</p>
 
@@ -51,7 +51,7 @@
 <h2>Wzrost popularności</h2>
 <p>W 2011 Neku wydała swój drugi album „<a href="https://grumqy.github.io/fangea/wiki/hana_ga_itaru_tokoro_de_saku/">Hana ga Itaru Tokoro de Saku</a>” (jap. „花が至る所で咲く”). Album został sprzedany ponad 116 tysięcy razy i nagrodził Neku pierwszą platynową płytą w jej karierze. Również w tym roku w swoich mediach społecznościowych ogłosiła, że będzie podkładać głos pod główną bohaterkę w serii anime „Koi-Iro Master Spark” rozpoczynając w ten sposób karierę aktorki głosowej.</p>
 
-<p>Przez 2013 Neku wydała kilka utworów, które zostały częścią trzeciego albumu „<a href="https://grumqy.github.io/fangea/wiki/ai_no_hibana/">Ai no Hibana</a>” (jap. 愛の火花) wydanego w marcu 2014. Jesienią Neku odbyła trasę koncertową po <a href="https://grumqy.github.io/fangea/wiki/usf/">Stanach Zjednoczonych</a> podczas której zagrała 7 koncertów. Następną trasę koncertową odbyła ponownie w <a href="https://grumqy.github.io/fangea/wiki/makronezja/">Makronezji</a> na przestrzeni kwietnia i maja 2015.</p>
+<p>Przez 2013 Neku wydała kilka utworów, które zostały częścią trzeciego albumu „<a href="https://grumqy.github.io/fangea/wiki/ai_no_hibana/">Ai no Hibana</a>” (jap. 愛の火花) wydanego w marcu 2014. Jesienią Neku odbyła trasę koncertową po <a href="https://grumqy.github.io/fangea/wiki/stany_zjednoczone/">Stanach Zjednoczonych</a> podczas której zagrała 7 koncertów. Następną trasę koncertową odbyła ponownie w <a href="https://grumqy.github.io/fangea/wiki/makronezja/">Makronezji</a> na przestrzeni kwietnia i maja 2015.</p>
 
 <h2>Dalsze lata działalności</h2>
 <p>W styczniu 2016 w swoich mediach społecznościowych Neku ogłosiła, że musi odpocząć od tworzenia muzyki co spowodowało przerwę w jej działalności, aż do listopada 2017 w którym wydała swój czwarty album nazwany „<a href="https://grumqy.github.io/fangea/wiki/gekkō_ga_kuzureochiru/">Gekkō ga Kuzureochiru</a>” (jap. 月光が崩れ落ちる) oraz zapowiedziała trasę koncertową po <a href="https://grumqy.github.io/fangea/wiki/liwonia/">Liwonii</a> na pierwszą połowę 2018.</p>
@@ -62,7 +62,7 @@
 
 <p>W 2023 wydała szósty album „<a href="https://grumqy.github.io/fangea/wiki/owari_no_kazi_kutsū/">Owari no Nai Kutsū</a>” (jap. „終わりのない苦痛”).</p>
 
-<p>Pod koniec sierpnia 2024 rozpoczęła trasę koncertową po <a href="https://grumqy.github.io/fangea/wiki/fangea/">Fangei</a> podczas której zagrała koncerty w <a href="https://grumqy.github.io/fangea/wiki/liwonia/">Liwonii</a>, <a href="https://grumqy.github.io/fangea/wiki/tuhalf/">Tuhalfie</a>, <a href="https://grumqy.github.io/fangea/wiki/usf/">Stanach Zjednoczonych</a> oraz <a href="https://grumqy.github.io/fangea/wiki/makronezja/">Makronezji</a>.</p>
+<p>Pod koniec sierpnia 2024 rozpoczęła trasę koncertową po <a href="https://grumqy.github.io/fangea/wiki/fangea/">Fangei</a> podczas której zagrała koncerty w <a href="https://grumqy.github.io/fangea/wiki/liwonia/">Liwonii</a>, <a href="https://grumqy.github.io/fangea/wiki/tuhalf/">Tuhalfie</a>, <a href="https://grumqy.github.io/fangea/wiki/stany_zjednoczone/">Stanach Zjednoczonych</a> oraz <a href="https://grumqy.github.io/fangea/wiki/makronezja/">Makronezji</a>.</p>
 
 <h2>Życie prywatne</h2>
 <p>Yui uważa się za ekstrowertyczkę i uwielbia spotykać się z fanami. Posiada również 3 koty, które wabią się Kim, Saul oraz Aya. Od czasu do czasu wraca do Heiko, gdzie mieszkają jej rodzice.</p>
@@ -71,7 +71,7 @@
 
 <h1>Filmografia</h1>
 <h2>Telewizja</h2>
-<div class="table-wrapper"><table><tbody><tr><th style="text-align: center;">Tytuł</th><th style="text-align: center;">Rola</th><th style="text-align: center;">Opis</th></tr><tr><td> Koi-Iro Master Spark (愛色のマスタースパーク) </td><td style="text-align: center;">Iro Koia </td><td>Seria anime, główna rola  </td></tr><tr><td> Tsuki no Senritsu (月の旋律く) </td><td>Aya Komichi </td><td>Seria anime, główna rola  </td></tr><tr><td> Unmei no Kōsaten (運命の交差点) </td><td>Umi Undongein </td><td>Seria anime, poboczna rola  </td></tr><tr><td> Lunatic Garden </td><td>Emily </td><td>Serial animowany, główna rola  </td></tr></tbody></table></div>
+<div class="table-wrapper"><table><tbody><tr><th style="text-align: center;">Tytuł</th><th style="text-align: center;">Rola</th><th style="text-align: center;">Opis</th></tr><tr><td> Koi-Iro Master Spark (愛色のマスタースパーク) </td><td style="text-align: center;">Iro Koia </td><td>Seria anime, główna rola  </td></tr><tr><td> Tsuki no Senritsu (月の旋律く) </td><td style="text-align: center;">Aya Komichi </td><td>Seria anime, główna rola  </td></tr><tr><td> Unmei no Kōsaten (運命の交差点) </td><td style="text-align: center;">Umi Undongein </td><td>Seria anime, poboczna rola  </td></tr><tr><td> Lunatic Garden </td><td style="text-align: center;">Emily </td><td>Serial animowany, główna rola  </td></tr></tbody></table></div>
 
 <h1>Dyskografia</h1>
 <h2>Albumy</h2>
@@ -94,7 +94,7 @@
 !t=cc=2 '''Kariera muzyczna''' !
 ! ! '''Gatunki''' !| J-pop, elektryczna |
 ! '''Wytwórnia''' !| (https://grumqy.github.io/fangea/wiki/kanako/)[Kanako] |
-! '''Strona internetowa''' !| (https://grumqy.github.io/fangea/wiki/dobalekpl/)[https://neku.mk/neku]/ |
+! '''Strona internetowa''' !| (https://grumqy.github.io/fangea/wiki/dobalekpl/)[https://neku.mk/neku/] |
 |}
 
 '''Yui Miyu''' (jap. 優美, ur. 6 października 1987), znana jako '''Neku''' (jap. ネク) - (https://grumqy.github.io/fangea/wiki/makronezja/)[makronezyjska] (https://grumqy.github.io/fangea/wiki/piosenkarz/)[piosenkarka], osobowość internetowa i (https://grumqy.github.io/fangea/wiki/aktor/)[aktorka]. Uznawana za jedną z najpopularniejszych piosenkarek w historii makronezyjskiej muzyki rozrywkowej oraz największą gwiazdę makronezyjskiego show-biznesu. Znana jest ze swojego występu w utworze „(https://grumqy.github.io/fangea/wiki/white_and_dark/)[White and Dark!!]” z 2009, który zyskał popularność w internecie. Występowała w wielu seriach anime oraz powieściach wizualnych.
@@ -121,7 +121,7 @@ W 2010 Neku wystąpiła w dwóch utworach w albumie (https://grumqy.github.io/fa
 
 W 2011 Neku wydała swój drugi album „(https://grumqy.github.io/fangea/wiki/hana_ga_itaru_tokoro_de_saku/)[Hana ga Itaru Tokoro de Saku]” (jap. „花が至る所で咲く”). Album został sprzedany ponad 116 tysięcy razy i nagrodził Neku pierwszą platynową płytą w jej karierze. Również w tym roku w swoich mediach społecznościowych ogłosiła, że będzie podkładać głos pod główną bohaterkę w serii anime „Koi-Iro Master Spark” rozpoczynając w ten sposób karierę aktorki głosowej.
 
-Przez 2013 Neku wydała kilka utworów, które zostały częścią trzeciego albumu „(https://grumqy.github.io/fangea/wiki/ai_no_hibana/)[Ai no Hibana]” (jap. 愛の火花) wydanego w marcu 2014. Jesienią Neku odbyła trasę koncertową po (https://grumqy.github.io/fangea/wiki/usf/)[Stanach Zjednoczonych] podczas której zagrała 7 koncertów. Następną trasę koncertową odbyła ponownie w (https://grumqy.github.io/fangea/wiki/makronezja/)[Makronezji] na przestrzeni kwietnia i maja 2015.
+Przez 2013 Neku wydała kilka utworów, które zostały częścią trzeciego albumu „(https://grumqy.github.io/fangea/wiki/ai_no_hibana/)[Ai no Hibana]” (jap. 愛の火花) wydanego w marcu 2014. Jesienią Neku odbyła trasę koncertową po (https://grumqy.github.io/fangea/wiki/stany_zjednoczone/)[Stanach Zjednoczonych] podczas której zagrała 7 koncertów. Następną trasę koncertową odbyła ponownie w (https://grumqy.github.io/fangea/wiki/makronezja/)[Makronezji] na przestrzeni kwietnia i maja 2015.
 
 == Dalsze lata działalności ==
 
@@ -133,7 +133,7 @@ W 2020 wydała piąty album „(https://grumqy.github.io/fangea/wiki/henka_no_ka
 
 W 2023 wydała szósty album „(https://grumqy.github.io/fangea/wiki/owari_no_kazi_kutsū/)[Owari no Nai Kutsū]” (jap. „終わりのない苦痛”).
 
-Pod koniec sierpnia 2024 rozpoczęła trasę koncertową po (https://grumqy.github.io/fangea/wiki/fangea/)[Fangei] podczas której zagrała koncerty w (https://grumqy.github.io/fangea/wiki/liwonia/)[Liwonii], (https://grumqy.github.io/fangea/wiki/tuhalf/)[Tuhalfie], (https://grumqy.github.io/fangea/wiki/usf/)[Stanach Zjednoczonych] oraz (https://grumqy.github.io/fangea/wiki/makronezja/)[Makronezji].
+Pod koniec sierpnia 2024 rozpoczęła trasę koncertową po (https://grumqy.github.io/fangea/wiki/fangea/)[Fangei] podczas której zagrała koncerty w (https://grumqy.github.io/fangea/wiki/liwonia/)[Liwonii], (https://grumqy.github.io/fangea/wiki/tuhalf/)[Tuhalfie], (https://grumqy.github.io/fangea/wiki/stany_zjednoczone/)[Stanach Zjednoczonych] oraz (https://grumqy.github.io/fangea/wiki/makronezja/)[Makronezji].
 
 == Życie prywatne ==
 
@@ -148,9 +148,9 @@ Podczas licznych wywiadów zdradziła, że jest ogromną fanką serii gier (http
 {|
 ! t=cTytuł !! t=cRola !! t=cOpis !
 | Koi-Iro Master Spark (愛色のマスタースパーク) || t=cIro Koia || Seria anime, główna rola |
-| Tsuki no Senritsu (月の旋律く) || Aya Komichi || Seria anime, główna rola |
-| Unmei no Kōsaten (運命の交差点) || Umi Undongein || Seria anime, poboczna rola |
-| Lunatic Garden || Emily || Serial animowany, główna rola |
+| Tsuki no Senritsu (月の旋律く) || t=cAya Komichi || Seria anime, główna rola |
+| Unmei no Kōsaten (運命の交差点) || t=cUmi Undongein || Seria anime, poboczna rola |
+| Lunatic Garden || t=cEmily || Serial animowany, główna rola |
 |}
 
 = Dyskografia =
