--- a/radio/index.html
+++ b/radio/index.html
@@ -27,6 +27,81 @@
         main #radio-list ul a.lang_jp{
            display: contents; 
         }
+        main #radio-list ul a.lang_se{
+           display: contents; 
+        }
+        main #radio-list ul a.lang_si{
+           display: contents; 
+        }
+        main #radio-list ul a.lang_cz{
+           display: contents; 
+        }
+        main #radio-list ul a.lang_kz{
+           display: contents; 
+        }
+        main #radio-list ul a.lang_ua{
+           display: contents; 
+        }
+        main #radio-list ul a.lang_ru{
+           display: contents; 
+        }
+        main #radio-list ul a.lang_dk{
+           display: contents; 
+        }
+        main #radio-list ul a.lang_ee{
+           display: contents; 
+        }
+        main #radio-list ul a.lang_kr{
+           display: contents; 
+        }
+        main #radio-list ul a.lang_vn{
+           display: contents; 
+        }
+        main #radio-list ul a.lang_it{
+           display: contents; 
+        }
+        main #radio-list ul a.lang_mt{
+           display: contents; 
+        }
+        main #radio-list ul a.lang_gr{
+           display: contents; 
+        }
+        main #radio-list ul a.lang_lt{
+           display: contents; 
+        }
+        main #radio-list ul a.lang_at{
+           display: contents; 
+        }
+        main #radio-list ul a.lang_lv{
+           display: contents; 
+        }
+        main #radio-list ul a.lang_il{
+           display: contents; 
+        }
+        main #radio-list ul a.lang_hr{
+           display: contents; 
+        }
+        main #radio-list ul a.lang_hu{
+           display: contents; 
+        }
+        main #radio-list ul a.lang_bg{
+           display: contents; 
+        }
+        main #radio-list ul a.lang_al{
+           display: contents; 
+        }
+        main #radio-list ul a.lang_mk{
+           display: contents; 
+        }
+        main #radio-list ul a.lang_rs{
+           display: contents; 
+        }
+        main #radio-list ul a.lang_ba{
+           display: contents; 
+        }
+        main #radio-list ul a.lang_me{
+           display: contents; 
+        }
         main #radio-list ul a.genre_pop{
            display: contents; 
         }
@@ -72,26 +147,206 @@
         main #radio-list ul a.genre_info{
            display: contents; 
         }
-        main #radio-list ul a.loc_pampersia{
+        main #radio-list ul a.lang_al {
+        display: contents;
+        }
+        main #radio-list ul a.lang_at {
+        display: contents;
+        }
+        main #radio-list ul a.lang_ba {
+        display: contents;
+        }
+        main #radio-list ul a.lang_bg {
+        display: contents;
+        }
+        main #radio-list ul a.lang_cz {
+        display: contents;
+        }
+        main #radio-list ul a.lang_dk {
+        display: contents;
+        }
+        main #radio-list ul a.lang_ee {
+        display: contents;
+        }
+        main #radio-list ul a.lang_en {
+        display: contents;
+        }
+        main #radio-list ul a.lang_ge {
+        display: contents;
+        }
+        main #radio-list ul a.lang_gr {
+        display: contents;
+        }
+        main #radio-list ul a.lang_hr {
+        display: contents;
+        }
+        main #radio-list ul a.lang_hu {
+        display: contents;
+        }
+        main #radio-list ul a.lang_il {
+        display: contents;
+        }
+        main #radio-list ul a.lang_it {
+        display: contents;
+        }
+        main #radio-list ul a.lang_jp {
+        display: contents;
+        }
+        main #radio-list ul a.lang_kr {
+        display: contents;
+        }
+        main #radio-list ul a.lang_kz {
+        display: contents;
+        }
+        main #radio-list ul a.lang_lt {
+        display: contents;
+        }
+        main #radio-list ul a.lang_lv {
+        display: contents;
+        }
+        main #radio-list ul a.lang_me {
+        display: contents;
+        }
+        main #radio-list ul a.lang_mk {
+        display: contents;
+        }
+        main #radio-list ul a.lang_mt {
+        display: contents;
+        }
+        main #radio-list ul a.lang_pl {
+        display: contents;
+        }
+        main #radio-list ul a.lang_rs {
+        display: contents;
+        }
+        main #radio-list ul a.lang_ru {
+        display: contents;
+        }
+        main #radio-list ul a.lang_se {
+        display: contents;
+        }
+        main #radio-list ul a.lang_si {
+        display: contents;
+        }
+        main #radio-list ul a.lang_ua {
+        display: contents;
+        }
+        main #radio-list ul a.lang_vn {
+        display: contents;
+        }
+        main #radio-list ul a.genre_pop{
+            display: contents; 
+        }
+        main #radio-list ul a.genre_citypop{
+            display: contents; 
+        }
+        main #radio-list ul a.genre_electro{
+            display: contents; 
+        }
+        main #radio-list ul a.genre_hiphop{
+            display: contents; 
+        }
+        main #radio-list ul a.genre_breakbeat{
+            display: contents; 
+        }
+        main #radio-list ul a.genre_randb{
+            display: contents; 
+        }
+        main #radio-list ul a.genre_lofi{
+            display: contents; 
+        }
+        main #radio-list ul a.genre_phonk{
+            display: contents; 
+        }
+        main #radio-list ul a.genre_opera{
+            display: contents; 
+        }
+        main #radio-list ul a.genre_country{
+            display: contents; 
+        }
+        main #radio-list ul a.genre_swing{
+            display: contents; 
+        }
+        main #radio-list ul a.genre_disco{
+            display: contents; 
+        }
+        main #radio-list ul a.genre_rock{
+            display: contents; 
+        }
+        main #radio-list ul a.genre_metal{
+            display: contents; 
+        }
+        main #radio-list ul a.genre_info{
+            display: contents; 
+        }
+        main #radio-list ul a.loc_alezjoonecja {
             display: contents;
         }
-        main #radio-list ul a.loc_nadmorze{
-           display: contents; 
+        main #radio-list ul a.loc_arduzja {
+            display: contents;
         }
-        main #radio-list ul a.loc_sudfangea{
-           display: contents; 
+        main #radio-list ul a.loc_atidalia {
+            display: contents;
         }
-        main #radio-list ul a.loc_montecydja{
-           display: contents; 
+        main #radio-list ul a.loc_ebengrad {
+            display: contents;
         }
-        main #radio-list ul a.loc_iznotia{
-          display: contents;  
+        main #radio-list ul a.loc_ekwalia {
+            display: contents;
         }
-        main #radio-list ul a.loc_pieczaria{
-          display: contents;  
+        main #radio-list ul a.loc_gurdzuria {
+            display: contents;
         }
-        main #radio-list ul a.loc_halandia{
-          display: contents;  
+        main #radio-list ul a.loc_halandia {
+            display: contents;
+        }
+        main #radio-list ul a.loc_iznotia {
+            display: contents;
+        }
+        main #radio-list ul a.loc_jarezja {
+            display: contents;
+        }
+        main #radio-list ul a.loc_kanawia {
+            display: contents;
+        }
+        main #radio-list ul a.loc_liwonia {
+            display: contents;
+        }
+        main #radio-list ul a.loc_makronezja {
+            display: contents;
+        }
+        main #radio-list ul a.loc_martylia {
+            display: contents;
+        }
+        main #radio-list ul a.loc_montecydia {
+            display: contents;
+        }
+        main #radio-list ul a.loc_najbielansk {
+            display: contents;
+        }
+        main #radio-list ul a.loc_nowytuhalf {
+            display: contents;
+        }
+        main #radio-list ul a.loc_pamercja {
+            display: contents;
+        }
+        main #radio-list ul a.loc_peczeria {
+            display: contents;
+        }
+        main #radio-list ul a.loc_peczeriadem {
+            display: contents;
+        }
+        main #radio-list ul a.loc_stanyzjednoczone {
+            display: contents;
+        }
+        main #radio-list ul a.loc_tajhoi {
+            display: contents;
+        }
+        main #radio-list ul a.loc_teran {
+            display: contents;
+        }
+        main #radio-list ul a.loc_zoltostan {
+            display: contents;
         }
     </style>
 </head>
@@ -104,64 +359,120 @@
     <div>Filtruj wg lokalizacji</div>
     <ul>
         <form>
-        <input type="checkbox" id="loc_all" class="checkbox_select_all" data-categories="loc_pampersia;loc_nadmorze;loc_sudfangea;loc_montecydja;loc_iznotia;loc_pieczaria;loc_halandia" checked>
-        <input type="checkbox" id="loc_pampersia" checked>
-        <input type="checkbox" id="loc_nadmorze" checked>
-        <input type="checkbox" id="loc_sudfangea" checked>
-        <input type="checkbox" id="loc_montecydja" checked>
-        <input type="checkbox" id="loc_iznotia" checked>
-        <input type="checkbox" id="loc_pieczaria" checked>
+        <input type="checkbox" id="loc_all" class="checkbox_select_all" data-categories="loc_alezjoonecja;loc_arduzja;loc_atidalia;loc_ebengrad;loc_ekwalia;loc_gurdzuria;loc_halandia;loc_iznotia;loc_jarezja;loc_kanawia;loc_liwonia;loc_makronezja;loc_martylia;loc_montecydia;loc_najbielansk;loc_nowytuhalf;loc_pamercja;loc_peczeria;loc_peczeriadem;loc_stanyzjednoczone;loc_tajhoi;loc_teran;loc_zoltostan" checked>
+        <input type="checkbox" id="loc_alezjoonecja" checked>
+        <input type="checkbox" id="loc_arduzja" checked>
+        <input type="checkbox" id="loc_atidalia" checked>
+        <input type="checkbox" id="loc_ebengrad" checked>
+        <input type="checkbox" id="loc_ekwalia" checked>
+        <input type="checkbox" id="loc_gurdzuria" checked>
         <input type="checkbox" id="loc_halandia" checked>
+        <input type="checkbox" id="loc_iznotia" checked>
+        <input type="checkbox" id="loc_jarezja" checked>
+        <input type="checkbox" id="loc_kanawia" checked>
+        <input type="checkbox" id="loc_liwonia" checked>
+        <input type="checkbox" id="loc_makronezja" checked>
+        <input type="checkbox" id="loc_martylia" checked>
+        <input type="checkbox" id="loc_montecydia" checked>
+        <input type="checkbox" id="loc_najbielansk" checked>
+        <input type="checkbox" id="loc_nowytuhalf" checked>
+        <input type="checkbox" id="loc_pamercja" checked>
+        <input type="checkbox" id="loc_peczeria" checked>
+        <input type="checkbox" id="loc_peczeriadem" checked>
+        <input type="checkbox" id="loc_stanyzjednoczone" checked>
+        <input type="checkbox" id="loc_tajhoi" checked>
+        <input type="checkbox" id="loc_teran" checked>
+        <input type="checkbox" id="loc_zoltostan" checked>
         </form>
-        <label for="loc_all" class="active">
-            <li>Wszystkie</li>
-        </label>
-        <label for="loc_pampersia" class="active">
-            <li><img src="https://i.ibb.co/27WybfV/1160351671839379497.webp">Pampersia</li>
-        </label>
-        <label for="loc_nadmorze" class="active">
-            <li><img src="https://i.ibb.co/BrzkQ4q/1187527487702450299.webp">Nadmorze</li>
-        </label>
-        <label for="loc_sudfangea" class="active">
-            <li><img src="https://i.ibb.co/pwhcqsT/1241709227207037021.webp">Sudfangea</li>
-        </label>
-        <label for="loc_montecydja" class="active">
-            <li><img src="https://i.ibb.co/jrY6hYR/1229166542655193190.webp">Montecydja</li>
-        </label>
-        <label for="loc_iznotia" class="active">
-            <li><img src="https://i.ibb.co/PNH57Dt/1160351653099212881.webp">Iznotia</li>
-        </label>
-        <label for="loc_pieczaria" class="active">
-            <li><img src="https://i.ibb.co/Q8HVycp/1186418659569180693.webp">Pieczaria</li>
-        </label>
-        <label for="loc_halandia" class="active">
-            <li><img src="https://i.ibb.co/d2c3LTm/1243213829115220068.webp">Halandia</li>
-        </label>
+        <label for="loc_all" class="active"><li>Wszystkie</li></label>
+        <label for="loc_alezjoonecja" class="active"><li>Alezjo-Onecja</li></label>
+        <label for="loc_arduzja" class="active"><li>Arduzja</li></label>
+        <label for="loc_atidalia" class="active"><li>Atidalia</li></label>
+        <label for="loc_ebengrad" class="active"><li>Ebengrad</li></label>
+        <label for="loc_ekwalia" class="active"><li>Ekwalia</li></label>
+        <label for="loc_gurdzuria" class="active"><li>Gurdżuria</li></label>
+        <label for="loc_halandia" class="active"><li>Halandia</li></label>
+        <label for="loc_iznotia" class="active"><li>Iznotia</li></label>
+        <label for="loc_jarezja" class="active"><li>Jarezja</li></label>
+        <label for="loc_kanawia" class="active"><li>Kanawia</li></label>
+        <label for="loc_liwonia" class="active"><li>Liwonia</li></label>
+        <label for="loc_makronezja" class="active"><li>Makronezja</li></label>
+        <label for="loc_martylia" class="active"><li>Martylia</li></label>
+        <label for="loc_montecydia" class="active"><li>Montecydia</li></label>
+        <label for="loc_najbielansk" class="active"><li>Najbielańsk</li></label>
+        <label for="loc_nowytuhalf" class="active"><li>Nowy Tuhalf</li></label>
+        <label for="loc_pamercja" class="active"><li>Pamercja</li></label>
+        <label for="loc_peczeria" class="active"><li>Peczeria</li></label>
+        <label for="loc_peczeriadem" class="active"><li>Peczeria Demokratyczna</li></label>
+        <label for="loc_stanyzjednoczone" class="active"><li>Stany Zjednoczone</li></label>
+        <label for="loc_tajhoi" class="active"><li>Taj-hoi</li></label>
+        <label for="loc_teran" class="active"><li>Teran</li></label>
+        <label for="loc_zoltostan" class="active"><li>Żółtostan</li></label>
     </ul>
     <div>Filtruj wg języka</div>
     <ul>
         <form>
-        <input type="checkbox" id="lang_all" class="checkbox_select_all" data-categories="lang_pl;lang_en;lang_ge;lang_jp" checked>
-        <input type="checkbox" id="lang_pl" checked>
-        <input type="checkbox" id="lang_en" checked>
-        <input type="checkbox" id="lang_ge" checked>
-        <input type="checkbox" id="lang_jp" checked>
+            <input type="checkbox" id="lang_all" class="checkbox_select_all" data-categories="lang_al;lang_at;lang_ba;lang_bg;lang_cz;lang_dk;lang_ee;lang_en;lang_ge;lang_gr;lang_hr;lang_hu;lang_il;lang_it;lang_jp;lang_kr;lang_kz;lang_lt;lang_lv;lang_me;lang_mk;lang_mt;lang_pl;lang_rs;lang_ru;lang_se;lang_si;lang_ua;lang_vn" checked>
+            <input type="checkbox" id="lang_al" checked>
+            <input type="checkbox" id="lang_at" checked>
+            <input type="checkbox" id="lang_ba" checked>
+            <input type="checkbox" id="lang_bg" checked>
+            <input type="checkbox" id="lang_cz" checked>
+            <input type="checkbox" id="lang_dk" checked>
+            <input type="checkbox" id="lang_ee" checked>
+            <input type="checkbox" id="lang_en" checked>
+            <input type="checkbox" id="lang_ge" checked>
+            <input type="checkbox" id="lang_gr" checked>
+            <input type="checkbox" id="lang_hr" checked>
+            <input type="checkbox" id="lang_hu" checked>
+            <input type="checkbox" id="lang_il" checked>
+            <input type="checkbox" id="lang_it" checked>
+            <input type="checkbox" id="lang_jp" checked>
+            <input type="checkbox" id="lang_kr" checked>
+            <input type="checkbox" id="lang_kz" checked>
+            <input type="checkbox" id="lang_lt" checked>
+            <input type="checkbox" id="lang_lv" checked>
+            <input type="checkbox" id="lang_me" checked>
+            <input type="checkbox" id="lang_mk" checked>
+            <input type="checkbox" id="lang_mt" checked>
+            <input type="checkbox" id="lang_pl" checked>
+            <input type="checkbox" id="lang_rs" checked>
+            <input type="checkbox" id="lang_ru" checked>
+            <input type="checkbox" id="lang_se" checked>
+            <input type="checkbox" id="lang_si" checked>
+            <input type="checkbox" id="lang_ua" checked>
+            <input type="checkbox" id="lang_vn" checked>
         </form>
-        <label for="lang_all" class="active">
-            <li>Wszystkie</li>
-        </label>
-        <label for="lang_pl" class="active">
-            <li>J. polski</li>
-        </label>
-        <label for="lang_en" class="active">
-            <li>J. angielski</li>
-        </label>
-        <label for="lang_ge" class="active">
-            <li>J. niemiecki</li>
-        </label>
-        <label for="lang_jp" class="active">
-            <li>J. japoński</li>
-        </label>
+        <label for="lang_all" class="active"><li>Wszystkie</li></label>
+        <label for="lang_al" class="active"><li>Albański</li></label>
+        <label for="lang_at" class="active"><li>Austriacki</li></label>
+        <label for="lang_ba" class="active"><li>Bośniacki</li></label>
+        <label for="lang_bg" class="active"><li>Bułgarski</li></label>
+        <label for="lang_cz" class="active"><li>Czeski</li></label>
+        <label for="lang_dk" class="active"><li>Duński</li></label>
+        <label for="lang_ee" class="active"><li>Estoński</li></label>
+        <label for="lang_en" class="active"><li>Angielski</li></label>
+        <label for="lang_ge" class="active"><li>Niemiecki</li></label>
+        <label for="lang_gr" class="active"><li>Grecki</li></label>
+        <label for="lang_hr" class="active"><li>Chorwacki</li></label>
+        <label for="lang_hu" class="active"><li>Węgierski</li></label>
+        <label for="lang_il" class="active"><li>Hebrajski</li></label>
+        <label for="lang_it" class="active"><li>Włoski</li></label>
+        <label for="lang_jp" class="active"><li>Japoński</li></label>
+        <label for="lang_kr" class="active"><li>Karelski</li></label>
+        <label for="lang_kz" class="active"><li>Kazachski</li></label>
+        <label for="lang_lt" class="active"><li>Litewski</li></label>
+        <label for="lang_lv" class="active"><li>Łotewski</li></label>
+        <label for="lang_me" class="active"><li>Czarnogórski</li></label>
+        <label for="lang_mk" class="active"><li>Macedoński</li></label>
+        <label for="lang_mt" class="active"><li>Maltański</li></label>
+        <label for="lang_pl" class="active"><li>Polski</li></label>
+        <label for="lang_rs" class="active"><li>Serbski</li></label>
+        <label for="lang_ru" class="active"><li>Rosyjski</li></label>
+        <label for="lang_se" class="active"><li>Szwedzki</li></label>
+        <label for="lang_si" class="active"><li>Słoweński</li></label>
+        <label for="lang_ua" class="active"><li>Ukraiński</li></label>
+        <label for="lang_vn" class="active"><li>Wietnamski</li></label>
     </ul>
     <div>Filtruj wg gatunku</div>
     <ul>
