--- a/radio/index.html
+++ b/radio/index.html
@@ -546,7 +546,7 @@
     </div>
     <div id="radio-list">
         <ul>
-                <a href="ohio" class="lang_pl genre_pop loc_pampersia">
+                <a href="ohio" class="lang_pl genre_pop loc_pamercja">
                     <li>
                         <img src="https://i.ibb.co/KNT8xY0/tvradio.png">
                         <span>Radio Republika</span>
