--- a/radio/index.html
+++ b/radio/index.html
@@ -249,6 +249,9 @@
         main #radio-list ul a.genre_breakbeat{
             display: contents; 
         }
+        main #radio-list ul a.genre_breakcore{
+            display: contents; 
+        }
         main #radio-list ul a.genre_randb{
             display: contents; 
         }
@@ -477,12 +480,13 @@
     <div>Filtruj wg gatunku</div>
     <ul>
         <form>
-        <input type="checkbox" id="genre_all" class="checkbox_select_all" data-categories="genre_pop;genre_citypop;genre_electro;genre_hiphop;genre_breakbeat;genre_randb;genre_lofi;genre_phonk;genre_opera;genre_country;genre_swing;genre_disco;genre_rock;genre_metal;genre_info" checked>
+        <input type="checkbox" id="genre_all" class="checkbox_select_all" data-categories="genre_pop;genre_citypop;genre_electro;genre_hiphop;genre_breakbeat;genre_breakcore;genre_randb;genre_lofi;genre_phonk;genre_opera;genre_country;genre_swing;genre_disco;genre_rock;genre_metal;genre_info" checked>
         <input type="checkbox" id="genre_pop" checked>
         <input type="checkbox" id="genre_citypop" checked>
         <input type="checkbox" id="genre_electro" checked>
         <input type="checkbox" id="genre_hiphop" checked>
         <input type="checkbox" id="genre_breakbeat" checked>
+        <input type="checkbox" id="genre_breakcore" checked>
         <input type="checkbox" id="genre_randb" checked>
         <input type="checkbox" id="genre_lofi" checked>
         <input type="checkbox" id="genre_phonk" checked>
@@ -511,6 +515,9 @@
         </label>
         <label for="genre_breakbeat" class="active">
             <li>Breakbeat</li>
+        </label>
+        <label for="genre_breakcore" class="active">
+            <li>Breakcore</li>
         </label>
         <label for="genre_randb" class="active">
             <li>R&B</li>
@@ -546,10 +553,10 @@
     </div>
     <div id="radio-list">
         <ul>
-                <a href="ohio" class="lang_pl genre_pop loc_pamercja">
+                <a href="https://youtube.com/playlist?list=PLZkKDd2WNmkJ1dyDrX_GagxasBlahqhrR&si=_MBFe1LbubZpaIVj" class="lang_si genre_breakcore loc_nowytuhalf">
                     <li>
-                        <img src="https://i.ibb.co/KNT8xY0/tvradio.png">
-                        <span>Radio Republika</span>
+                        <img src="https://i.ibb.co/7r41HBt/zlam-kor.png">
+                        <span>Radio Break The Core</span>
                     </li>  
                 </a>
 
