--- a/radio/index.html
+++ b/radio/index.html
@@ -406,7 +406,7 @@
         <label for="loc_nowytuhalf" class="active"><li>Nowy Tuhalf</li></label>
         <label for="loc_pamercja" class="active"><li>Pamercja</li></label>
         <label for="loc_peczeria" class="active"><li>Peczeria</li></label>
-        <label for="loc_peczeriadem" class="active"><li>Peczeria Demokratyczna</li></label>
+        <label for="loc_peczeriadem" class="active"><li>Peczeria Dem.</li></label>
         <label for="loc_stanyzjednoczone" class="active"><li>Stany Zjednoczone</li></label>
         <label for="loc_tajhoi" class="active"><li>Taj-hoi</li></label>
         <label for="loc_teran" class="active"><li>Teran</li></label>
