--- a/wiki/montecydyjski_ład/index.html
+++ b/wiki/montecydyjski_ład/index.html
@@ -3,12 +3,12 @@
 <link rel="icon" href="/fangea/local/fangeapage.png" type="image/png">
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Monteverische Ordnung (Montecydyjski Ład) - Fangea i inne kontynenty</title>
-<meta property="og:title" content="Monteverische Ordnung (Montecydyjski Ład)">
-<meta name="twitter:title" content="Monteverische Ordnung (Montecydyjski Ład)">
-<meta name="description" content="Rządowy Fundusz Montecydyjski Ład: Program Inwestycji Strategicznych – centralny fundusz celowy ustanowiony w celu zapobiegania, przeciwdziałania i zwalczania kryzysu gospodarczego w 2018 oraz wywołanych nim sytuacji gospodarczych. Na podstawie uchwały Rady Związkowej z 2019 r. w sprawie ustanowienia Rządowego Funduszu Montecydyjski Ład: Programu Inwestycji Strategicznych ustanowiono Fundusz. Powo">
-<meta property="og:description" content="Rządowy Fundusz Montecydyjski Ład: Program Inwestycji Strategicznych – centralny fundusz celowy ustanowiony w celu zapobiegania, przeciwdziałania i zwalczania kryzysu gospodarczego w 2018 oraz wywołanych nim sytuacji gospodarczych. Na podstawie uchwały Rady Związkowej z 2019 r. w sprawie ustanowienia Rządowego Funduszu Montecydyjski Ład: Programu Inwestycji Strategicznych ustanowiono Fundusz. Powo">
-<meta name="twitter:description" content="Rządowy Fundusz Montecydyjski Ład: Program Inwestycji Strategicznych – centralny fundusz celowy ustanowiony w celu zapobiegania, przeciwdziałania i zwalczania kryzysu gospodarczego w 2018 oraz wywołanych nim sytuacji gospodarczych. Na podstawie uchwały Rady Związkowej z 2019 r. w sprawie ustanowienia Rządowego Funduszu Montecydyjski Ład: Programu Inwestycji Strategicznych ustanowiono Fundusz. Powo">
+<title>Tytuł Artykułu - Fangea i inne kontynenty</title>
+<meta property="og:title" content="Tytuł Artykułu">
+<meta name="twitter:title" content="Tytuł Artykułu">
+<meta name="description" content="Rządowy Fundusz Montecydyjski Ład: Program Inwestycji Strategicznych – centralny fundusz celowy ustanowiony w celu zapobiegania, przeciwdziałania i zwalczania kryzysu gospodarczego w 2018 roku oraz wywołanych nim problemów gospodarczych. Na podstawie uchwały Rady Związkowej z 2019, powołano Rządowy Fundusz Montecydyjski Ład, będący częścią Programu Inwestycji Strategicznych. Utworzenie tego Fundus">
+<meta property="og:description" content="Rządowy Fundusz Montecydyjski Ład: Program Inwestycji Strategicznych – centralny fundusz celowy ustanowiony w celu zapobiegania, przeciwdziałania i zwalczania kryzysu gospodarczego w 2018 roku oraz wywołanych nim problemów gospodarczych. Na podstawie uchwały Rady Związkowej z 2019, powołano Rządowy Fundusz Montecydyjski Ład, będący częścią Programu Inwestycji Strategicznych. Utworzenie tego Fundus">
+<meta name="twitter:description" content="Rządowy Fundusz Montecydyjski Ład: Program Inwestycji Strategicznych – centralny fundusz celowy ustanowiony w celu zapobiegania, przeciwdziałania i zwalczania kryzysu gospodarczego w 2018 roku oraz wywołanych nim problemów gospodarczych. Na podstawie uchwały Rady Związkowej z 2019, powołano Rządowy Fundusz Montecydyjski Ład, będący częścią Programu Inwestycji Strategicznych. Utworzenie tego Fundus">
 <meta property="og:image" content="https://i.ibb.co/pnd4mTv/monteverischeordnegn.png">
 <meta name="twitter:image" content="https://i.ibb.co/pnd4mTv/monteverischeordnegn.png">
 <meta property="og:image:width" content="4581">
@@ -28,13 +28,13 @@
 <ul></ul>
 </nav>
 <article>
-<header><div>Monteverische Ordnung (Montecydyjski Ład)</div><span>12.10.2024</span></header>
-<table class="infobox"><caption>Monteverische Ordnung</caption><tbody><tr><td colspan="2"> <img src="https://i.ibb.co/pnd4mTv/monteverischeordnegn.png" data-description="Logo"> </td></tr><tr><th>Państwo</th><td> <img src="https://i.ibb.co/Fhvtg3R/montecydja-flaga.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/montecydia/">Montecydia</a> </td></tr><tr><th>Założyciele</th><td> <a href="https://grumqy.github.io/fangea/wiki/rada_związkowa/">Rada Związkowa</a> </td></tr><tr><th>Miejsce założenia</th><td> Montecydyjski Parlament </td></tr><tr><th>Data założenia</th><td> 2019 r. 4 luty </td></tr><tr><th>Forma</th><td> Zbiór aktów prawnych</td></tr></tbody></table>
+<header><div>Tytuł Artykułu</div><span>13.10.2024</span></header>
+<table class="infobox"><caption>Monteverische Ordnung</caption><tbody><tr><td colspan="2"> <img src="https://i.ibb.co/pnd4mTv/monteverischeordnegn.png" data-description="Logo"> </td></tr><tr><th>Państwo</th><td> <img src="https://i.ibb.co/Fhvtg3R/montecydja-flaga.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/montecydia/">Montecydia</a> </td></tr><tr><th>Założyciele</th><td> <a href="https://grumqy.github.io/fangea/wiki/rada_związkowa/">Rada Związkowa</a> </td></tr><tr><th>Miejsce założenia</th><td> Montecydyjski Parlament </td></tr><tr><th>Data założenia</th><td> 4 lutego 2019 </td></tr><tr><th>Forma</th><td> Zbiór aktów prawnych</td></tr></tbody></table>
 
-<p><b>Rządowy Fundusz Montecydyjski Ład: Program Inwestycji Strategicznych</b> – centralny fundusz celowy ustanowiony w celu zapobiegania, przeciwdziałania i zwalczania kryzysu gospodarczego w 2018 oraz wywołanych nim sytuacji gospodarczych.</p>
+<p><b>Rządowy Fundusz Montecydyjski Ład: Program Inwestycji Strategicznych</b> – centralny fundusz celowy ustanowiony w celu zapobiegania, przeciwdziałania i zwalczania kryzysu gospodarczego w 2018 roku oraz wywołanych nim problemów gospodarczych.</p>
 
 <h1>Powołanie Funduszu</h1>
-<p>Na podstawie uchwały <a href="https://grumqy.github.io/fangea/wiki/rada_związkowa_montecydii/">Rady Związkowej</a> z 2019 r. w sprawie ustanowienia Rządowego Funduszu Montecydyjski Ład: Programu Inwestycji Strategicznych ustanowiono Fundusz. Powołanie Funduszu i środki finansowe pozostają w związku z ustawą z 2018 r. o zmianie ustawy o szczególnych rozwiązaniach związanych z zapobieganiem, przeciwdziałaniem i zwalczaniem kryzysu gospodarczego, innych problemów gospodarczych oraz wywołanych nimi sytuacji kryzysowych oraz niektórych innych ustaw. Ustanowiony Fundusz określano mianem Programu.</p>
+<p>Na podstawie uchwały <a href="https://grumqy.github.io/fangea/wiki/rada_związkowa_montecydii/">Rady Związkowej</a> z 2019, powołano Rządowy Fundusz Montecydyjski Ład, będący częścią Programu Inwestycji Strategicznych. Utworzenie tego Funduszu oraz jego finansowanie mają swoje podstawy w ustawie z 2018 roku, która wprowadziła zmiany w ustawie o szczególnych rozwiązaniach dotyczących zapobiegania, przeciwdziałania i zwalczania kryzysu gospodarczego oraz innych problemów gospodarczych, a także sytuacji kryzysowych z nich wynikających. Fundusz ten określa się jako Program Inwestycji Strategicznych.</p>
 
 <h1>Program rozdziału i przekazywania środków</h1>
 <p>Program określa zasady rozdziału i przekazywania:</p>
@@ -102,15 +102,15 @@
 ! Państwo !| [[icon:https://i.ibb.co/Fhvtg3R/montecydja-flaga.png|small]] (https://grumqy.github.io/fangea/wiki/montecydia/)[Montecydia] |
 ! Założyciele !| (https://grumqy.github.io/fangea/wiki/rada_związkowa/)[Rada Związkowa] |
 ! Miejsce założenia!| Montecydyjski Parlament |
-! Data założenia !| 2019 r. 4 luty |
+! Data założenia !| 4 lutego 2019 |
 ! Forma!| Zbiór aktów prawnych|
 |}
 
-'''Rządowy Fundusz Montecydyjski Ład: Program Inwestycji Strategicznych''' – centralny fundusz celowy ustanowiony w celu zapobiegania, przeciwdziałania i zwalczania kryzysu gospodarczego w 2018 oraz wywołanych nim sytuacji gospodarczych.
+'''Rządowy Fundusz Montecydyjski Ład: Program Inwestycji Strategicznych''' – centralny fundusz celowy ustanowiony w celu zapobiegania, przeciwdziałania i zwalczania kryzysu gospodarczego w 2018 roku oraz wywołanych nim problemów gospodarczych.
 
 = Powołanie Funduszu =
 
-Na podstawie uchwały (https://grumqy.github.io/fangea/wiki/rada_związkowa_montecydii/)[Rady Związkowej] z 2019 r. w sprawie ustanowienia Rządowego Funduszu Montecydyjski Ład: Programu Inwestycji Strategicznych ustanowiono Fundusz. Powołanie Funduszu i środki finansowe pozostają w związku z ustawą z 2018 r. o zmianie ustawy o szczególnych rozwiązaniach związanych z zapobieganiem, przeciwdziałaniem i zwalczaniem kryzysu gospodarczego, innych problemów gospodarczych oraz wywołanych nimi sytuacji kryzysowych oraz niektórych innych ustaw. Ustanowiony Fundusz określano mianem Programu.
+Na podstawie uchwały (https://grumqy.github.io/fangea/wiki/rada_związkowa_montecydii/)[Rady Związkowej] z 2019, powołano Rządowy Fundusz Montecydyjski Ład, będący częścią Programu Inwestycji Strategicznych. Utworzenie tego Funduszu oraz jego finansowanie mają swoje podstawy w ustawie z 2018 roku, która wprowadziła zmiany w ustawie o szczególnych rozwiązaniach dotyczących zapobiegania, przeciwdziałania i zwalczania kryzysu gospodarczego oraz innych problemów gospodarczych, a także sytuacji kryzysowych z nich wynikających. Fundusz ten określa się jako Program Inwestycji Strategicznych.
 
 = Program rozdziału i przekazywania środków =
 
