--- a/wiki/montecydyjski_ład/index.html
+++ b/wiki/montecydyjski_ład/index.html
@@ -3,9 +3,9 @@
 <link rel="icon" href="/fangea/local/fangeapage.png" type="image/png">
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Tytuł Artykułu - Fangea i inne kontynenty</title>
-<meta property="og:title" content="Tytuł Artykułu">
-<meta name="twitter:title" content="Tytuł Artykułu">
+<title>Monteverische Ordnung (Montecydyjski Ład) - Fangea i inne kontynenty</title>
+<meta property="og:title" content="Monteverische Ordnung (Montecydyjski Ład)">
+<meta name="twitter:title" content="Monteverische Ordnung (Montecydyjski Ład)">
 <meta name="description" content="Rządowy Fundusz Montecydyjski Ład: Program Inwestycji Strategicznych – centralny fundusz celowy ustanowiony w celu zapobiegania, przeciwdziałania i zwalczania kryzysu gospodarczego w 2018 roku oraz wywołanych nim problemów gospodarczych. Na podstawie uchwały Rady Związkowej z 2019, powołano Rządowy Fundusz Montecydyjski Ład, będący częścią Programu Inwestycji Strategicznych. Utworzenie tego Fundus">
 <meta property="og:description" content="Rządowy Fundusz Montecydyjski Ład: Program Inwestycji Strategicznych – centralny fundusz celowy ustanowiony w celu zapobiegania, przeciwdziałania i zwalczania kryzysu gospodarczego w 2018 roku oraz wywołanych nim problemów gospodarczych. Na podstawie uchwały Rady Związkowej z 2019, powołano Rządowy Fundusz Montecydyjski Ład, będący częścią Programu Inwestycji Strategicznych. Utworzenie tego Fundus">
 <meta name="twitter:description" content="Rządowy Fundusz Montecydyjski Ład: Program Inwestycji Strategicznych – centralny fundusz celowy ustanowiony w celu zapobiegania, przeciwdziałania i zwalczania kryzysu gospodarczego w 2018 roku oraz wywołanych nim problemów gospodarczych. Na podstawie uchwały Rady Związkowej z 2019, powołano Rządowy Fundusz Montecydyjski Ład, będący częścią Programu Inwestycji Strategicznych. Utworzenie tego Fundus">
@@ -28,8 +28,8 @@
 <ul></ul>
 </nav>
 <article>
-<header><div>Tytuł Artykułu</div><span>13.10.2024</span></header>
-<table class="infobox"><caption>Monteverische Ordnung</caption><tbody><tr><td colspan="2"> <img src="https://i.ibb.co/pnd4mTv/monteverischeordnegn.png" data-description="Logo"> </td></tr><tr><th>Państwo</th><td> <img src="https://i.ibb.co/Fhvtg3R/montecydja-flaga.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/montecydia/">Montecydia</a> </td></tr><tr><th>Założyciele</th><td> <a href="https://grumqy.github.io/fangea/wiki/rada_związkowa/">Rada Związkowa</a> </td></tr><tr><th>Miejsce założenia</th><td> Montecydyjski Parlament </td></tr><tr><th>Data założenia</th><td> 4 lutego 2019 </td></tr><tr><th>Forma</th><td> Zbiór aktów prawnych</td></tr></tbody></table>
+<header><div>Monteverische Ordnung (Montecydyjski Ład)</div><span>14.10.2024</span></header>
+<table class="infobox"><caption>Monteverische Ordnung</caption><tbody><tr><td colspan="2"> <img src="https://i.ibb.co/pnd4mTv/monteverischeordnegn.png" data-description="Logo"> </td></tr><tr><th>Państwo</th><td> <img src="https://i.ibb.co/Fhvtg3R/montecydja-flaga.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/montecydia/">Montecydia</a> </td></tr><tr><th>Założyciele</th><td> <a href="https://grumqy.github.io/fangea/wiki/rada_związkowa_montecydii/">Rada Związkowa</a> </td></tr><tr><th>Miejsce założenia</th><td> Montecydyjski Parlament </td></tr><tr><th>Data założenia</th><td> 4 lutego 2019 </td></tr><tr><th>Forma</th><td> Zbiór aktów prawnych</td></tr></tbody></table>
 
 <p><b>Rządowy Fundusz Montecydyjski Ład: Program Inwestycji Strategicznych</b> – centralny fundusz celowy ustanowiony w celu zapobiegania, przeciwdziałania i zwalczania kryzysu gospodarczego w 2018 roku oraz wywołanych nim problemów gospodarczych.</p>
 
@@ -100,7 +100,7 @@
  <div id="source-code" style="display:none;">{|infobox Monteverische Ordnung
 |c=2 [[timg:https://i.ibb.co/pnd4mTv/monteverischeordnegn.png|Logo]] |
 ! Państwo !| [[icon:https://i.ibb.co/Fhvtg3R/montecydja-flaga.png|small]] (https://grumqy.github.io/fangea/wiki/montecydia/)[Montecydia] |
-! Założyciele !| (https://grumqy.github.io/fangea/wiki/rada_związkowa/)[Rada Związkowa] |
+! Założyciele !| (https://grumqy.github.io/fangea/wiki/rada_związkowa_montecydii/)[Rada Związkowa] |
 ! Miejsce założenia!| Montecydyjski Parlament |
 ! Data założenia !| 4 lutego 2019 |
 ! Forma!| Zbiór aktów prawnych|
