--- a/wiki/mmt_transport/index.html
+++ b/wiki/mmt_transport/index.html
@@ -6,9 +6,9 @@
 <title>MMT Transport - Fangea i inne kontynenty</title>
 <meta property="og:title" content="MMT Transport">
 <meta name="twitter:title" content="MMT Transport">
-<meta name="description" content="MMT Transport to pameryjskie przedsiębiorstwo zajmujące się transportem, spedycją oraz logistyką. MMT Transport zostało założone w 1989 roku przez Marcina Modrzejewskiego. Pierwotnym zakresem działalności było dostarczanie systemów informatycznych do przedsiębiorstw logistycznych. Od 2001 roku firma zajmuje się organizacją transportów międzynarodowych.">
-<meta property="og:description" content="MMT Transport to pameryjskie przedsiębiorstwo zajmujące się transportem, spedycją oraz logistyką. MMT Transport zostało założone w 1989 roku przez Marcina Modrzejewskiego. Pierwotnym zakresem działalności było dostarczanie systemów informatycznych do przedsiębiorstw logistycznych. Od 2001 roku firma zajmuje się organizacją transportów międzynarodowych.">
-<meta name="twitter:description" content="MMT Transport to pameryjskie przedsiębiorstwo zajmujące się transportem, spedycją oraz logistyką. MMT Transport zostało założone w 1989 roku przez Marcina Modrzejewskiego. Pierwotnym zakresem działalności było dostarczanie systemów informatycznych do przedsiębiorstw logistycznych. Od 2001 roku firma zajmuje się organizacją transportów międzynarodowych.">
+<meta name="description" content="MMT Transport (właściwie Marcin Modrzejewski Transport Sp. z o.o.) – pameryjskie przedsiębiorstwo zajmujące się transportem, spedycją oraz logistyką. MMT Transport zostało założone w 1989 roku przez Marcina Modrzejewskiego. Pierwotnym zakresem działalności było dostarczanie systemów informatycznych do przedsiębiorstw logistycznych. Od 2001 roku firma zajmuje się organizacją transportów międzynarod">
+<meta property="og:description" content="MMT Transport (właściwie Marcin Modrzejewski Transport Sp. z o.o.) – pameryjskie przedsiębiorstwo zajmujące się transportem, spedycją oraz logistyką. MMT Transport zostało założone w 1989 roku przez Marcina Modrzejewskiego. Pierwotnym zakresem działalności było dostarczanie systemów informatycznych do przedsiębiorstw logistycznych. Od 2001 roku firma zajmuje się organizacją transportów międzynarod">
+<meta name="twitter:description" content="MMT Transport (właściwie Marcin Modrzejewski Transport Sp. z o.o.) – pameryjskie przedsiębiorstwo zajmujące się transportem, spedycją oraz logistyką. MMT Transport zostało założone w 1989 roku przez Marcina Modrzejewskiego. Pierwotnym zakresem działalności było dostarczanie systemów informatycznych do przedsiębiorstw logistycznych. Od 2001 roku firma zajmuje się organizacją transportów międzynarod">
 <meta property="og:image" content="https://i.ibb.co/pw5NBbF/mmt-transport.png">
 <meta name="twitter:image" content="https://i.ibb.co/pw5NBbF/mmt-transport.png">
 <meta property="og:image:width" content="3747">
@@ -29,9 +29,9 @@
 </nav>
 <article>
 <header><div>MMT Transport</div><span>04.11.2024</span></header>
-<table class="infobox"><caption>MMT Transport</caption><tbody><tr><td colspan="2"> <img src="https://i.ibb.co/pw5NBbF/mmt-transport.png" data-description="Logo"> </td></tr><tr><th>Państwo</th><td> <img src="https://i.ibb.co/rp9xVpZ/obraz-2024-09-01-174117214.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/pamercja/">Pamercja</a> </td></tr><tr><th>Siedziba</th><td> <a href="https://grumqy.github.io/fangea/wiki/węgorzewo/">Węgorzewo</a> </td></tr><tr><th>Adres</th><td> ul. Postępu 12,<br> 60-200 Węgorzewo </td></tr><tr><th>Forma prawna</th><td> Sp. z o.o. </td></tr><tr><th>Prezes</th><td> Marcin Modrzejewski </td></tr><tr><th>Dyrektor</th><td> Olgierd Konecki </td></tr><tr><th>Zatrudnienie</th><td> 40 (2020) </td></tr></tbody></table>
+<table class="infobox"><caption>MMT Transport</caption><tbody><tr><th style="text-align: center;" colspan="2"> (Marcin Modrzejewski Transport Sp. z o.o.)</th></tr><tr><td colspan="2"> <img src="https://i.ibb.co/pw5NBbF/mmt-transport.png" data-description="Logo"> </td></tr><tr><th>Państwo</th><td> <img src="https://i.ibb.co/rp9xVpZ/obraz-2024-09-01-174117214.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/pamercja/">Pamercja</a> </td></tr><tr><th>Siedziba</th><td> <a href="https://grumqy.github.io/fangea/wiki/węgorzewo/">Węgorzewo</a> </td></tr><tr><th>Adres</th><td> ul. Postępu 12,<br> 60-200 Węgorzewo </td></tr><tr><th>Forma prawna</th><td> Sp. z o.o. </td></tr><tr><th>Prezes</th><td> Marcin Modrzejewski </td></tr><tr><th>Dyrektor</th><td> Olgierd Konecki </td></tr><tr><th>Zatrudnienie</th><td> 40 (2020) </td></tr></tbody></table>
 
-<p>MMT Transport to pameryjskie przedsiębiorstwo zajmujące się transportem, spedycją oraz logistyką. MMT Transport zostało założone w 1989 roku przez Marcina Modrzejewskiego.</p>
+<p><b>MMT Transport (właściwie Marcin Modrzejewski Transport Sp. z o.o.)</b> – pameryjskie przedsiębiorstwo zajmujące się transportem, spedycją oraz logistyką. MMT Transport zostało założone w 1989 roku przez Marcina Modrzejewskiego.</p>
 
 <p>Pierwotnym zakresem działalności było dostarczanie systemów informatycznych do przedsiębiorstw logistycznych. Od 2001 roku firma zajmuje się organizacją transportów międzynarodowych.</p>
 
@@ -52,6 +52,7 @@
 
 <p>Ideą i myślą przewodnią warsztatów jest przekazanie wartości w postaci praktycznej wiedzy i narzędzi pracy osobom związanym lub chcącym związać swoją karierę zawodową z szeroko rozumianą branżą TSL (Transport, Spedycja, Logistyka) oraz nieustannie dążącym do rozwoju osobistego i podnoszenia swoich kompetencji zawodowych.</p>
  <div id="source-code" style="display:none;">{|infobox MMT Transport
+! t=cc=2 (Marcin Modrzejewski Transport Sp. z o.o.) !
 |c=2 [[timg:https://i.ibb.co/pw5NBbF/mmt-transport.png|Logo]] |
 ! Państwo !| [[icon:https://i.ibb.co/rp9xVpZ/obraz-2024-09-01-174117214.png|small]] (https://grumqy.github.io/fangea/wiki/pamercja/)[Pamercja] |
 ! Siedziba !| (https://grumqy.github.io/fangea/wiki/węgorzewo/)[Węgorzewo] |
@@ -62,7 +63,7 @@
 ! Zatrudnienie !| 40 (2020) |
 |}
 
-MMT Transport to pameryjskie przedsiębiorstwo zajmujące się transportem, spedycją oraz logistyką. MMT Transport zostało założone w 1989 roku przez Marcina Modrzejewskiego.
+'''MMT Transport (właściwie Marcin Modrzejewski Transport Sp. z o.o.)''' – pameryjskie przedsiębiorstwo zajmujące się transportem, spedycją oraz logistyką. MMT Transport zostało założone w 1989 roku przez Marcina Modrzejewskiego.
 
 Pierwotnym zakresem działalności było dostarczanie systemów informatycznych do przedsiębiorstw logistycznych. Od 2001 roku firma zajmuje się organizacją transportów międzynarodowych.
 
