--- a/index.html
+++ b/index.html
@@ -165,14 +165,14 @@
                 <div class="article-tile-description">Powstanie Ekwalijskie</div>
             </div>
         </a>
-        <a href="https://grumqy.github.io/fangea/wiki/mistrzostwa_fangei_w_piłce_nożnej_2024/">
+        <a href="https://grumqy.github.io/fangea/wiki/mmt_transport/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
                 <div class="article-tile-image">
-                    <div class="article-tile-text"><span>Mistrzostwa Fangei w Piłce Nożnej 2024 dwudziesty pierwszy turniej o mistrzostwo Fangei w piłce nożnej mężczyzn. Gospodarzem turnieju, po raz czwarty w historii, będzie Sudfangea – w przeszłości, mistrzostwa w 1961 oraz 2001 roku rozgrywały się na terenie Sudfangei oraz cztery mecze Pucharu Fangei 2021 były rozgrywane w Rockford. Turniej odbędzie się na 5 stadionach w 4 różnych miastach.</span></div>
-                    <img src="https://i.ibb.co/F0rnbJ5/xdbenc.png">
+                    <div class="article-tile-text"><span>MMT Transport (właściwie Marcin Modrzejewski Transport Sp. z o.o.) – pameryjskie przedsiębiorstwo zajmujące się transportem, spedycją oraz logistyką. MMT Transport zostało założone w 1989 roku przez Marcina Modrzejewskiego. Pierwotnym zakresem działalności było dostarczanie systemów informatycznych do przedsiębiorstw logistycznych. Od 2001 roku firma zajmuje się organizacją transportów międzynarodowych.</span></div>
+                    <img src="https://i.ibb.co/pw5NBbF/mmt-transport.png">
                 </div>
-                <div class="article-tile-description">Mistrzostwa Fangei w Piłce Nożnej 2024</div>
+                <div class="article-tile-description">MMT Transport</div>
             </div>
         </a>
         <a href="https://grumqy.github.io/fangea/wiki/liwonia/">
