--- a/wiki/ergonbud/index.html
+++ b/wiki/ergonbud/index.html
@@ -28,9 +28,9 @@
 <ul></ul>
 </nav>
 <article>
-<header><div>Ergonbud</div><span>01.09.2024</span></header>
-<table class="infobox"><caption>Ergonbud International</caption><tbody><tr><td colspan="2"> <img src="https://i.ibb.co/y5Jb3mR/ergonbud.png" data-description="Logo"> </td></tr><tr><th>Państwo</th><td> <img src="https://i.ibb.co/6ZKVq0q/lemburg.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/lemburg/">Lemburg</a> </td></tr><tr><th>Siedziba</th><td> <a href="https://grumqy.github.io/fangea/wiki/vounaria/">Vounaria</a> </td></tr><tr><th>Adres</th><td> οδ. Λεωνίδα 8<br>10-000 Vounaria </td></tr><tr><th>Forma prawna</th><td> spółka akcyjna </td></tr><tr><th>Prezes</th><td> Kostas Nikolaidis<br>(CEO) </td></tr><tr><th>Przewodniczący rady nadzorczej</th><td> Dimitrios Konstantinou </td></tr><tr><th>Zatrudnienie</th><td> 65 000 (2020) </td></tr><tr><th>Giełda</th><td> <a href="https://grumqy.github.io/fangea/wiki/vounaria_chrematistirio/">Vounaria Chrematistirio</a> </td></tr><tr><th><a href="https://pl.wikipedia.org/wiki/International_Securities_Identification_Number">ISIN</a></th><td> LB000000ERN1 </td></tr><tr><th>Symbol akcji</th><td> ERN </td></tr></tbody></table>
-<table class="infobox"><caption>Ergonbud Sp. z o.o.</caption><tbody><tr><th>Państwo</th><td> <img src="https://i.ibb.co/rp9xVpZ/obraz-2024-09-01-174117214.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/pamercja/">Pamercja</a> </td></tr><tr><th>Siedziba</th><td> <a href="https://grumqy.github.io/fangea/wiki/lubiniec_koźlacki/">Lubiniec Koźlacki</a> </td></tr><tr><th>Adres</th><td> ul. Nowa Huta 15<br>42-700 Lubiniec Koźlacki </td></tr><tr><th>Forma prawna</th><td> Sp. z o.o. </td></tr><tr><th>Prezes</th><td> Kamil Wrona, Adam Wójcik-Kowalczyk </td></tr><tr><th>Zatrudnienie</th><td> 6000 (2023) </td></tr></tbody></table>
+<header><div>Ergonbud</div><span>05.11.2024</span></header>
+<table class="infobox"><caption>Ergonbud International</caption><tbody><tr><td colspan="2"> <img src="https://i.ibb.co/y5Jb3mR/ergonbud.png" data-description="Logo"> </td></tr><tr><th>Państwo</th><td> <img src="https://i.ibb.co/6ZKVq0q/lemburg.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/lemburg/">Lemburg</a> </td></tr><tr><th>Siedziba</th><td> <a href="https://grumqy.github.io/fangea/wiki/vounaria/">Vounaria</a> </td></tr><tr><th>Adres</th><td> οδ. Λεωνίδα 8<br>Vounaria </td></tr><tr><th>Forma prawna</th><td> spółka akcyjna </td></tr><tr><th>Prezes</th><td> Kostas Nikolaidis<br>(CEO) </td></tr><tr><th>Przewodniczący rady nadzorczej</th><td> Dimitrios Konstantinou </td></tr><tr><th>Zatrudnienie</th><td> 65 000 (2020) </td></tr><tr><th>Giełda</th><td> <a href="https://grumqy.github.io/fangea/wiki/vounaria_chrematistirio/">Vounaria Chrematistirio</a> </td></tr><tr><th><a href="https://pl.wikipedia.org/wiki/International_Securities_Identification_Number">ISIN</a></th><td> LB000000ERN1 </td></tr><tr><th>Symbol akcji</th><td> ERN </td></tr></tbody></table>
+<table class="infobox"><caption>Ergonbud Sp. z o.o.</caption><tbody><tr><th>Państwo</th><td> <img src="https://i.ibb.co/rp9xVpZ/obraz-2024-09-01-174117214.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/pamercja/">Pamercja</a> </td></tr><tr><th>Siedziba</th><td> <a href="https://grumqy.github.io/fangea/wiki/lubiniec_koźlacki/">Lubiniec Koźlacki</a> </td></tr><tr><th>Adres</th><td> ul. Nowa Huta 15<br>Lubiniec Koźlacki </td></tr><tr><th>Forma prawna</th><td> Sp. z o.o. </td></tr><tr><th>Prezes</th><td> Kamil Wrona, Adam Wójcik-Kowalczyk </td></tr><tr><th>Zatrudnienie</th><td> 6000 (2023) </td></tr></tbody></table>
 
 <p>Ergonbud International – lemburska spółka budowlana z siedzibą w Vounarii (wcześniej w Eleii w Lemburgu), notowana na <a href="https://grumqy.github.io/fangea/wiki/vounaria_chrematistirio/">Vounaria Chrematistirio</a>.</p>
 
@@ -90,7 +90,7 @@
 |c=2 [[timg:https://i.ibb.co/y5Jb3mR/ergonbud.png|Logo]] |
 ! Państwo !| [[icon:https://i.ibb.co/6ZKVq0q/lemburg.png|small]] (https://grumqy.github.io/fangea/wiki/lemburg/)[Lemburg] |
 ! Siedziba !| (https://grumqy.github.io/fangea/wiki/vounaria/)[Vounaria] |
-! Adres !| οδ. Λεωνίδα 8<br>10-000 Vounaria |
+! Adres !| οδ. Λεωνίδα 8<br>Vounaria |
 ! Forma prawna !| spółka akcyjna |
 ! Prezes !| Kostas Nikolaidis<br>(CEO) |
 ! Przewodniczący rady nadzorczej !| Dimitrios Konstantinou |
@@ -102,7 +102,7 @@
 {|infobox Ergonbud Sp. z o.o.
 ! Państwo !| [[icon:https://i.ibb.co/rp9xVpZ/obraz-2024-09-01-174117214.png|small]] (https://grumqy.github.io/fangea/wiki/pamercja/)[Pamercja] |
 ! Siedziba !| (https://grumqy.github.io/fangea/wiki/lubiniec_koźlacki/)[Lubiniec Koźlacki] |
-! Adres !| ul. Nowa Huta 15<br>42-700 Lubiniec Koźlacki |
+! Adres !| ul. Nowa Huta 15<br>Lubiniec Koźlacki |
 ! Forma prawna !| Sp. z o.o. |
 ! Prezes !| Kamil Wrona, Adam Wójcik-Kowalczyk |
 ! Zatrudnienie !| 6000 (2023) |
