--- a/wiki/mmt_transport/index.html
+++ b/wiki/mmt_transport/index.html
@@ -3,9 +3,9 @@
 <link rel="icon" href="/fangea/local/fangeapage.png" type="image/png">
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Tytuł Artykułu - Fangea i inne kontynenty</title>
-<meta property="og:title" content="Tytuł Artykułu">
-<meta name="twitter:title" content="Tytuł Artykułu">
+<title>MMT Transport - Fangea i inne kontynenty</title>
+<meta property="og:title" content="MMT Transport">
+<meta name="twitter:title" content="MMT Transport">
 <meta name="description" content="MMT Transport (właściwie Marcin Modrzejewski Transport Sp. z o.o.) – pameryjskie przedsiębiorstwo zajmujące się transportem, spedycją oraz logistyką. MMT Transport zostało założone w 1989 roku przez Marcina Modrzejewskiego. Pierwotnym zakresem działalności było dostarczanie systemów informatycznych do przedsiębiorstw logistycznych. Od 2001 roku firma zajmuje się organizacją transportów międzynarod">
 <meta property="og:description" content="MMT Transport (właściwie Marcin Modrzejewski Transport Sp. z o.o.) – pameryjskie przedsiębiorstwo zajmujące się transportem, spedycją oraz logistyką. MMT Transport zostało założone w 1989 roku przez Marcina Modrzejewskiego. Pierwotnym zakresem działalności było dostarczanie systemów informatycznych do przedsiębiorstw logistycznych. Od 2001 roku firma zajmuje się organizacją transportów międzynarod">
 <meta name="twitter:description" content="MMT Transport (właściwie Marcin Modrzejewski Transport Sp. z o.o.) – pameryjskie przedsiębiorstwo zajmujące się transportem, spedycją oraz logistyką. MMT Transport zostało założone w 1989 roku przez Marcina Modrzejewskiego. Pierwotnym zakresem działalności było dostarczanie systemów informatycznych do przedsiębiorstw logistycznych. Od 2001 roku firma zajmuje się organizacją transportów międzynarod">
@@ -28,8 +28,8 @@
 <ul></ul>
 </nav>
 <article>
-<header><div>Tytuł Artykułu</div><span>05.11.2024</span></header>
-<table class="infobox"><caption>MMT Transport</caption><tbody><tr><th style="text-align: center;" colspan="2"> (Marcin Modrzejewski Transport Sp. z o.o.)</th></tr><tr><td colspan="2"> <img src="https://i.ibb.co/pw5NBbF/mmt-transport.png" data-description="Logo"> </td></tr><tr><th>Państwo</th><td> <img src="https://i.ibb.co/rp9xVpZ/obraz-2024-09-01-174117214.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/pamercja/">Pamercja</a> </td></tr><tr><th>Siedziba</th><td> <a href="https://grumqy.github.io/fangea/wiki/węgorzewo/">Węgorzewo</a> </td></tr><tr><th>Adres</th><td> ul. Postępu 12,<br>Węgorzewo </td></tr><tr><th>Forma prawna</th><td> Sp. z o.o. </td></tr><tr><th>Prezes</th><td> Marcin Modrzejewski </td></tr><tr><th>Dyrektor</th><td> Olgierd Konecki </td></tr><tr><th>Zatrudnienie</th><td> 40 (2020) </td></tr></tbody></table>
+<header><div>MMT Transport</div><span>05.11.2024</span></header>
+<table class="infobox"><caption>MMT Transport</caption><tbody><tr><th style="text-align: center;" colspan="2"> (Marcin Modrzejewski Transport Sp. z o.o.)</th></tr><tr><td colspan="2"> <img src="https://i.ibb.co/pw5NBbF/mmt-transport.png" data-description="Logo"> </td></tr><tr><th>Państwo</th><td> <img src="https://i.ibb.co/rp9xVpZ/obraz-2024-09-01-174117214.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/pamercja/">Pamercja</a> </td></tr><tr><th>Siedziba</th><td> <a href="https://grumqy.github.io/fangea/wiki/węgorzewo/">Węgorzewo</a> </td></tr><tr><th>Adres</th><td> ul. Postępu 12<br>Węgorzewo </td></tr><tr><th>Forma prawna</th><td> Sp. z o.o. </td></tr><tr><th>Prezes</th><td> Marcin Modrzejewski </td></tr><tr><th>Dyrektor</th><td> Olgierd Konecki </td></tr><tr><th>Zatrudnienie</th><td> 40 (2020) </td></tr></tbody></table>
 
 <p><b>MMT Transport (właściwie Marcin Modrzejewski Transport Sp. z o.o.)</b> – pameryjskie przedsiębiorstwo zajmujące się transportem, spedycją oraz logistyką. MMT Transport zostało założone w 1989 roku przez Marcina Modrzejewskiego.</p>
 
@@ -56,7 +56,7 @@
 |c=2 [[timg:https://i.ibb.co/pw5NBbF/mmt-transport.png|Logo]] |
 ! Państwo !| [[icon:https://i.ibb.co/rp9xVpZ/obraz-2024-09-01-174117214.png|small]] (https://grumqy.github.io/fangea/wiki/pamercja/)[Pamercja] |
 ! Siedziba !| (https://grumqy.github.io/fangea/wiki/węgorzewo/)[Węgorzewo] |
-! Adres !| ul. Postępu 12,<br>Węgorzewo |
+! Adres !| ul. Postępu 12<br>Węgorzewo |
 ! Forma prawna !| Sp. z o.o. |
 ! Prezes !| Marcin Modrzejewski |
 ! Dyrektor !| Olgierd Konecki |
