--- a/wiki/greenpay/index.html
+++ b/wiki/greenpay/index.html
@@ -28,8 +28,8 @@
 <ul></ul>
 </nav>
 <article>
-<header><div>Greenpay</div><span>08.09.2024</span></header>
-<table class="infobox"><caption>Grenpay Inc.</caption><tbody><tr><td colspan="2"> <img src="https://i.ibb.co/fxTTnsH/greenpay2.png" data-description="Logo"> </td></tr><tr><th>Państwo</th><td> <img src="https://i.ibb.co/6ZKVq0q/lemburg.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/lemburg/">Lemburg</a> </td></tr><tr><th>Siedziba</th><td> <a href="https://grumqy.github.io/fangea/wiki/vounaria/">Vounaria</a> </td></tr><tr><th>Adres</th><td> οδ. Εμμανουήλ 52<br>10-000 Vounaria </td></tr><tr><th>Forma prawna</th><td> spółka publiczna </td></tr><tr><th>Prezes</th><td> Theronikos Erymantheas<br>(CEO) </td></tr><tr><th>Dyrektor</th><td> Lysandros Pherecleides </td></tr><tr><th>Zatrudnienie</th><td> 10 400 (2019) </td></tr><tr><th>Giełda</th><td> <a href="https://grumqy.github.io/fangea/wiki/vounaria_chrematistirio/">Vounaria Chrematistirio</a> </td></tr><tr><th><a href="https://pl.wikipedia.org/wiki/International_Securities_Identification_Number">ISIN</a></th><td> LB000000GRP1 </td></tr><tr><th>Symbol akcji</th><td> GRP </td></tr></tbody></table>
+<header><div>Greenpay</div><span>05.11.2024</span></header>
+<table class="infobox"><caption>Greenpay Inc.</caption><tbody><tr><td colspan="2"> <img src="https://i.ibb.co/fxTTnsH/greenpay2.png" data-description="Logo"> </td></tr><tr><th>Państwo</th><td> <img src="https://i.ibb.co/6ZKVq0q/lemburg.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/lemburg/">Lemburg</a> </td></tr><tr><th>Siedziba</th><td> <a href="https://grumqy.github.io/fangea/wiki/vounaria/">Vounaria</a> </td></tr><tr><th>Adres</th><td> οδ. Εμμανουήλ 52<br>Vounaria </td></tr><tr><th>Forma prawna</th><td> spółka publiczna </td></tr><tr><th>Prezes</th><td> Theronikos Erymantheas<br>(CEO) </td></tr><tr><th>Dyrektor</th><td> Lysandros Pherecleides </td></tr><tr><th>Zatrudnienie</th><td> 10 400 (2019) </td></tr><tr><th>Giełda</th><td> <a href="https://grumqy.github.io/fangea/wiki/vounaria_chrematistirio/">Vounaria Chrematistirio</a> </td></tr><tr><th><a href="https://pl.wikipedia.org/wiki/International_Securities_Identification_Number">ISIN</a></th><td> LB000000GRP1 </td></tr><tr><th>Symbol akcji</th><td> GRP </td></tr></tbody></table>
 
 <p>Greenpay Inc. – Lemburska spółka i organizacja członkowska zajmująca się wydawaniem kart płatniczych, powstała w 1961 roku pod nazwą Green Card.</p>
 
@@ -74,11 +74,11 @@
 <h1>Usługi Greenpay</h1>
 <ol><li>Greenpay Cashback – umożliwia posiadaczom debetowych kart Greenpay wypłatę gotówki podczas płacenia kartą za towary lub usługi</li>
 <li>Greenpay Flashpay – umożliwia błyskawiczne (poniżej 1 sekundy) płatności zbliżeniowe za drobne kwoty. Technologia pozwala również na realizację transakcji powyżej limitu po podaniu kodu PIN przez posiadacza.</li></ol>
- <div id="source-code" style="display:none;">{|infobox Grenpay Inc.
+ <div id="source-code" style="display:none;">{|infobox Greenpay Inc.
 |c=2 [[timg:https://i.ibb.co/fxTTnsH/greenpay2.png|Logo]] |
 ! Państwo !| [[icon:https://i.ibb.co/6ZKVq0q/lemburg.png|small]] (https://grumqy.github.io/fangea/wiki/lemburg/)[Lemburg] |
 ! Siedziba !| (https://grumqy.github.io/fangea/wiki/vounaria/)[Vounaria] |
-! Adres !| οδ. Εμμανουήλ 52<br>10-000 Vounaria |
+! Adres !| οδ. Εμμανουήλ 52<br>Vounaria |
 ! Forma prawna !| spółka publiczna |
 ! Prezes !| Theronikos Erymantheas<br>(CEO) |
 ! Dyrektor !| Lysandros Pherecleides |
